# dev-research

puzzle1/sample_project/: CMakeLists.txt  sdkconfig
puzzle1/sample_project/main/: CMakeLists.txt  main.c
puzzle1/sample_project/main/components/device_http/: device_http.h
puzzle2/sample_project/: CMakeLists.txt
puzzle2/sample_project/main/: CMakeLists.txt  main.c
puzzle2/sample_project/main/components/device_flash/: device_flash.c  device_flash.h
puzzle2/sample_project/main/components/device_http/: device_http.c
puzzle2/sample_project/main/components/device_wifi/: device_wifi.c
puzzle3/sample_project/: partitions.csv  sdkconfig
puzzle3/sample_project/main/: CMakeLists.txt  main.c
puzzle3/sample_project/main/components/device_flash/: device_flash.c  device_flash.h
puzzle3/sample_project/main/components/device_usart/: device_usart.c  device_usart.h
puzzle3/sample_project/main/components/device_wifi/: device_wifi.h
